# PKPDsim

./: .RData  .Rbuildignore  .Rhistory  .gitignore  .travis.yml  .travis.yml~  404.html  CLAUDE.html  CLAUDE.md  CRAN-SUBMISSION  DEPLOYMENT.md  DESCRIPTION  Dockerfile  Dockerfile.aws  Jenkinsfile  LICENSE  LICENSE-text.html  LICENSE-text.md  MANIFEST.in  NAMESPACE  NEWS.md  PKPDsim.Rproj  README.MD  README.md  README_python.md  _pkgdown.yml  authors.html  authors.md  cran-comments.md  docker-compose.yml  index.html  index.md  llms.txt  pkgdown.yml  pyproject.toml  search.json  setup.py  sitemap.xml  slack_notification.sh
.claude/: settings.local.json
R/: PKPDsim-package.R  RcppExports.R  add_ruv.R  add_ruv_to_quantile.R  adherence.R  advan.R  advan_create_data.R  advan_parse_output.R  advan_process_infusion_doses.R  analytical_eqn_wrapper.R  apply_duration_scale.R  apply_lagtime.R  calc_auc_analytic.R  calc_ss_analytic.R  calc_ss_lin.R  calculate_parameters.R  chain.R  check_iov_specification.R  check_mixture_model.R  compile_sim_cpp.R  covariate_last_obs_only.R  covariate_table_to_list.R  covariates_table_to_list.R  create_event_table.R  create_obs_data.R  cv_to_omega.R  define_tdm_init_model.R  detect_ode_syntax.R  get_fixed_parameters.R  get_model_info.R  get_ode_model_size.R  get_parameters_from_code.R  get_t_obs_from_regimen.R  get_var_y.R  github.R  hemtox.R  ifelse0.R  install_default_literature_model.R  is_newer_package.R  is_positive_definite.R  (+67 more)
articles/: PKPDsim.html  PKPDsim.md  covariates.html  covariates.md  error.html  error.md  estimation-nlmixr.html  estimation-nlmixr.md  example-absorption-models.html  example-absorption-models.md  example-pkpd-model.html  example-pkpd-model.md  export-model.html  export-model.md  getting-started.html  index.html  index.md  model.html  model.md  output.html  output.md  parameters.html  parameters.md  regimen.html  regimen.md  simulation.html  simulation.md  speed.html  speed.md  variability.html  variability.md
data/: pkdata.RData
examples/: basic_simulation.py  population_simulation.py
exec/: model_library.R
git-hooks/: pre-commit
inst/: server.R  style.css  ui.R
man/: OneCompIVbolus.Rd  OneCompIVinfusion.Rd  OneCompOral.Rd  PKPDsim-package.Rd  ThreeCompIVbolus.Rd  ThreeCompIVinfusion.Rd  ThreeCompIVinfusionMetab.Rd  ThreeCompOral.Rd  ThreeCompOralMetab.Rd  TwoCompIVbolus.Rd  TwoCompIVinfusion.Rd  TwoCompOral.Rd  add_quotes.Rd  add_ruv.Rd  (+111 more)
(+429 files in other folders)
