[build-system]
requires = ["setuptools>=61.0", "wheel", "numpy>=1.21.0", "cython>=0.29.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pkpdsim-python"
version = "1.4.1"
description = "Tools for Performing Pharmacokinetic-Pharmacodynamic Simulations"
readme = "README_python.md"
license = {text = "MIT"}
authors = [
    {name = "Ron Keizer", email = "ron@insight-rx.com"},
    {name = "Jasmine Hughes", email = "jasmine@insight-rx.com"},
    {name = "Dominic Tong", email = "dominic@insight-rx.com"},
    {name = "Kara Woo", email = "kara@insight-rx.com"},
    {name = "Jordan Brooks", email = "jordan.brooks@insight-rx.com"},
]
maintainers = [
    {name = "Ron Keizer", email = "ron@insight-rx.com"},
]
keywords = ["pharmacokinetics", "pharmacodynamics", "simulation", "ode", "pkpd"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "cython>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
    "sphinx",
    "sphinx-rtd-theme",
]
test = [
    "pytest>=6.0",
    "pytest-cov",
    "numpy-testing",
]

[project.urls]
Homepage = "https://github.com/InsightRX/PKPDsim"
Documentation = "https://insightrx.github.io/PKPDsim/"
Repository = "https://github.com/InsightRX/PKPDsim"
"Bug Tracker" = "https://github.com/InsightRX/PKPDsim/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pkpdsim*"]
exclude = ["tests*", "R*", "man*", "inst*", "vignettes*"]

[tool.setuptools.package-data]
pkpdsim = ["models/*.json", "data/*.json"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]